# fbgame

./: CMakeLists.txt  config.yaml
data/: data.yaml
data/font/: font.yaml
shaders/: def.fs.glsl  def.vs.glsl
src/: game.cpp  game.h  game_config.cpp  game_config.h  main.cpp  path.h  random.h  score.h
src/engine/: actor.cpp  actor.h  button.cpp  button.h  files.h  font.cpp  font.h  label.cpp  label.h  projection.cpp  projection.h  rect.cpp  rect.h  rect_actor.cpp  rect_actor.h  rect_render.cpp  rect_render.h  render.cpp  render.h  shader.cpp  shader.h  texture.cpp  texture.h  timer.h  vbo.h  window.cpp  window.h
src/engine/ui/: font.cpp  font.h
src/fb/: bird.cpp  bird.h  game_object.cpp  game_object.h  tube.cpp  tube.h
